stylesheet.less
// -------------------------------------
// BaseKit Standard Template: Stylesheet
// -------------------------------------




// -----------------------------
// 1. #LESS Includes
// -----------------------------


@import "@{templateCommon}/bk-less-framework-v8.less"; // BaseKit LESS Framework


// Template Includes
@import "@{templateLocal}/less/template.less"; // Global styles
@import "@{templateLocal}/less/widgets.less"; // Widgets

// Plugin Includes
@import "@{templateLocal}/less/plugins/plugin-blog.less"; // Plugin: Blog CSS
@import "@{templateLocal}/less/plugins/plugin-menu.less"; // Plugin: Menu CSS
@import "@{templateLocal}/less/plugins/plugin-ecommerce.less"; // Plugin: Ecommerce CSS

@import "@{templateLocal}/less/fork-variables.less"; // Forked Templates




// -----------------------------
// 2. #Page Settings
// -----------------------------


// Page Container
// --------------


.site-container {
    width: auto;
    @media only screen and (min-width: 1140px) {
        width: @value__container--width;
        margin: 0 auto;
    }
}




// Widgets
// -------

.widget:not([data-name="row"]) {
    margin-top: 0;
    margin-bottom: 20px;
    width: 90%;
    margin-right: 5%;
    margin-left: 5%;
    @media only screen and (min-width: 1140px) {
        width: @value__widget--width;
        margin: @value__widget--margin--desktop;
    }
}

// Widgets in Responsive Columns
.site-container {
    // Two Columns
    .columns-two-left,
    .columns-two-right,
    // Three Columns
    .columns-three-left,
    .columns-three-middle,
    .columns-three-right,
    // Four Columns
    .columns-four-first,
    .columns-four-second,
    .columns-four-third,
    .columns-four-fourth {
        .widget:not([data-name="row"]) {
            width: auto;
            margin: 10px 0;
            @media only screen and (min-width: 1140px) {
                width: auto;
                margin: 0 auto 20px;
            }
        }
    }
}

.brand .widget:not([data-name="row"]) ,
.widget[data-widget-type="profile"] {
    width: 100%;
    margin: 0;
}


// -----------------------------
// 3. #Mixins
// -----------------------------


.border-radius (@radius: 3px) {
    -webkit-border-radius: @radius;
    -moz-border-radius: @radius;
    border-radius: @radius;
}

.transition (@prop: all, @time: 0.5s, @ease: ease) {
    -webkit-transition: @prop @time @ease;
    -moz-transition:    @prop @time @ease;
    -ms-transition:     @prop @time @ease;
    -o-transition:      @prop @time @ease;
    transition:         @prop @time @ease;
}

